<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/CompanyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:paddingStart="20dp"
            android:text="@string/company_name"
            android:textAlignment="viewStart"
            android:textColor="@color/slate_blue"
            android:textSize="60sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/nameTxt"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center_vertical"
            android:paddingStart="20sp"
            android:text="@string/sign_up"
            android:textColor="@color/slate_blue"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/usernameTextbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/FirstnameTextbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_firstname"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/LastnameTextbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_lastname"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/EmailTextbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry,TextFields" />

        <EditText
            android:id="@+id/ProgramTextbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_program"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry,TextFields" />

        <EditText
            android:id="@+id/CourseTextbox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/course_1"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry,TextFields" />

        <EditText
            android:id="@+id/CourseTextbox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/course_2"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry,TextFields" />

        <EditText
            android:id="@+id/CourseTextbox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/course_3"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry,TextFields" />

        <EditText
            android:id="@+id/PasswordTextbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/CreateBtn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/slate_blue"
            android:onClick="CreateBtn_OnClick"
            android:text="@string/create_account"
            android:textSize="18sp"
            app:backgroundTint="@null"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>