<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrationActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/CompanyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:paddingStart="20dp"
                android:text="@string/account_details"
                android:textAlignment="viewStart"
                android:textColor="@color/slate_blue"
                android:textSize="60sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/nameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/text_margin"
                android:text="@string/enter_firstname"
                android:textColor="@color/slate_blue"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/emailTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/text_margin"
                android:text="@string/enter_email"
                android:textColor="@color/slate_blue"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/programTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/text_margin"
                android:text="@string/enter_program"
                android:textColor="@color/slate_blue"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/courseTxt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/text_margin"
                android:text="@string/course_1"
                android:textColor="@color/slate_blue"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/courseTxt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/text_margin"
                android:text="@string/course_2"
                android:textColor="@color/slate_blue"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/courseTxt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/text_margin"
                android:text="@string/course_3"
                android:textColor="@color/slate_blue"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>