<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/CompanyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:paddingStart="20dp"
        android:text="@string/company_name"
        android:textAlignment="viewStart"
        android:textColor="@color/slate_blue"
        android:textSize="60sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/UsernameTextbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:onClick="RestartLogin_OnClick"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry,UsingOnClickInXml" />

    <EditText
        android:id="@+id/PasswordTextbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:onClick="RestartLogin_OnClick"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry,UsingOnClickInXml" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:backgroundTint="@color/slate_blue"
        android:onClick="LoginBtn_OnClick"
        android:text="@string/login"
        android:textSize="18sp"
        app:backgroundTint="@null"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/CreateBtn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:onClick="CreateBtn_OnClick"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@color/slate_blue"
        android:textSize="18sp"
        tools:ignore="UsingOnClickInXml" />
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>